--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <html>
   <head>
+    <meta charset="utf-8">
+
+    <link rel="stylesheet" href="style.css">
     <title>Welcome to suchandsuch.com</title>
   </head>
   <body>
