--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="utf-8">
 
     <link rel="stylesheet" href="style.css">
-    <title>Welcome to suchandsuch.com</title>
+    <title>BigGardenBeats</title>
   </head>
   <body>
     
@@ -15,7 +15,7 @@
     <div class="stars3" aria-hidden="true"></div>
     <main class="main">
         <section class="contact">
-            <h1 class="title">Awesome Thing</h1>
+            <h1 class="title">BigGardenBeas</h1>
             <h2 class="sub-title">Site Under Construction</h2>
         </section>
     </main>
