--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!--
 <html>
   <head>
     <meta charset="utf-8">
@@ -19,5 +20,67 @@
             <h2 class="sub-title">Site Under Construction</h2>
         </section>
     </main>
+  </body>
+</html>
+//-->
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Party Placeholder</title>
+    <style>
+      body {
+        background-color: #f6decd;
+        font-family: 'Helvetica Neue', sans-serif;
+        color: #4b4b4b;
+      }
+
+      header {
+        background-color: #ffa07a;
+        padding: 20px;
+        text-align: center;
+      }
+
+      h1 {
+        margin: 0;
+        font-size: 48px;
+        text-transform: uppercase;
+      }
+
+      .container {
+        max-width: 800px;
+        margin: 0 auto;
+        padding: 20px;
+        text-align: center;
+      }
+
+      p {
+        font-size: 24px;
+        line-height: 1.5;
+      }
+
+      .btn {
+        display: inline-block;
+        background-color: #4b4b4b;
+        color: #fff;
+        padding: 10px 20px;
+        text-decoration: none;
+        font-size: 24px;
+        margin-top: 20px;
+        border-radius: 5px;
+      }
+    </style>
+  </head>
+  <body>
+    <header>
+      <h1>Party Time!</h1>
+    </header>
+    <div class="container">
+      <p>Join us for a night of dancing, music, and fun!</p>
+      <p>Date: TBD</p>
+      <p>Location: TBD</p>
+      <a href="#" class="btn">RSVP Now</a>
+    </div>
   </body>
 </html>
