--- a/index.html
+++ b/index.html
@@ -1,25 +1,14 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-
-    <link rel="stylesheet" href="style.css">
-    <title>BigGardenBeats</title>
-  </head>
-  <body>
-    
-
-
-    <div class="overlay"></div>
-    <div class="stars" aria-hidden="true"></div>
-    <div class="starts2" aria-hidden="true"></div>
-    <div class="stars3" aria-hidden="true"></div>
-    <main class="main">
-        <section class="contact">
-            <h1 class="title">BigGardenBeats</h1>
-            <h2 class="sub-title">Site Under Construction</h2>
-        </section>
-    </main>
-  </body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>BigGardenBeats</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <h1>BigGardenBeats</h1>
+  
+</body>
 </html>
-
