--- a/index.html
+++ b/index.html
@@ -1,14 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>BigGardenBeats</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <h1>BigGardenBeats</h1>
-  
-</body>
+
+<html>
+  <head>
+    <meta charset="utf-8">
+
+    <link rel="stylesheet" href="style.css">
+    <title>BigGardenBeats</title>
+  </head>
+  <body>
+    
+    <div>
+      <h3>BigGardenBeats</h3>
+      <h5>18.-20.08.2023</h5>
+      <p>Click to start...</p>
+      <h4>Chrome only / Safari antiquated</h4>
+    </div>
+    </main>
+  </body>
 </html>
+
