--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-
+    <script src="script.js"></script>
     <link rel="stylesheet" href="style.css">
     <title>BigGardenBeats</title>
   </head>
