--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <script src="script.js"></script>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.scss">
     <title>BigGardenBeats</title>
   </head>
   <body>
@@ -12,7 +12,7 @@
       <h3>BigGardenBeats</h3>
       <h5>18.-20.08.2023</h5>
       <p>Click to start...</p>
-      <h4>Chrome only / Safari antiquated</h4>
+      <h4>You know where</h4>
     </div>
     </main>
   </body>
