--- a/index.html
+++ b/index.html
@@ -11,9 +11,14 @@
     <div>
       <h3>BigGardenBeats</h3>
       <h5>18.-20.08.2023</h5>
+      <button onclick="playSong()">Song abspielen</button>
+    <audio id="myAudio">
+    <source src="song.mp3" type="audio/mpeg">
+    </audio> 
+
       <p>Click to start...</p>
       <h4>You know where</h4>
-    </div>
+       </div>
     </main>
   </body>
 </html>
